...
  ReactionGroup,
  PinnedMessage,
  Role,
  GuildInvite,
  InvitePreview,
  SearchResult,
  Thread,
  Attachment,
  ScheduledEvent,
  Poll,
  WikiPage,
  WikiRevision,
  Notification,
...
